refactor: 컨트롤러 List 반환 테스트 Json 값을 비교하도록 정교화